--- a/_data/projects.json
+++ b/_data/projects.json
@@ -1,5 +1,13 @@
 [
   {
+    "title": "dinhanhthi.com",
+    "icon": "⭐",
+    "description": "11ty theme. Current version of my personal website.",
+    "source": "https://github.com/dinhanhthi/dinhanhthi.com",
+    "url": "http://dinhanhthi.com",
+    "tech": ["eleventy", "git", "html5", "js", "liquid", "nodejs", "notion", "nunjucks", "postman", "scss", "vscode"]
+  },
+  {
     "title": "math2it-wordpress-gatsby",
     "description": "An attemp to migrate a wordpress site to gatsby",
     "source": "https://github.com/dinhanhthi/math2it-egg",
@@ -28,14 +36,6 @@
     "source": "https://github.com/math2it/texmath-gas",
     "url": "http://texmath.com",
     "tech": ["gatsby", "js", "react", "tailwindcss", "graphql", "wordpress"]
-  },
-  {
-    "title": "dinhanhthi.com",
-    "icon": "⭐",
-    "description": "11ty theme. Current version of my personal website.",
-    "source": "https://github.com/dinhanhthi/dinhanhthi.com",
-    "url": "http://dinhanhthi.com",
-    "tech": ["eleventy", "html5", "js", "liquid", "nodejs", "nunjucks", "scss"]
   },
   {
     "title": "Data Science Learning",
