--- a/_data/settings.json
+++ b/_data/settings.json
@@ -1,22 +1,17 @@
 {
   "title": "🔥 Anh-Thi DINH",
-  "url": "https://dinhanhthi.com",
+  "url": "https://mohammadrezaeian.github.io/",
   "domain": ".com",
   "description": "I failed my way to success!",
   "feed": {
     "subtitle": "I failed my way to success!",
     "filename": "feed.xml",
     "path": "/feed/feed.xml",
-    "id": "https://dinhanhthi.com"
+    "id": "https://mohammadrezaeian.github.io/"
   },
   "jsonfeed": {
     "path": "/feed/feed.json",
-    "url": "https://dinhanhthi.com/feed/feed.json"
-  },
-  "author": {
-    "name": "Anh-Thi DINH",
-    "twitterHandle": "dinhanhthi",
-    "url": "https://dinhanhthi.com"
+    "url": "https://mohammadrezaeian.github.io/feed/feed.json"
   },
   "look4job": false,
   "outdatedTime": 365
