--- a/_data/settings.json
+++ b/_data/settings.json
@@ -1,5 +1,5 @@
 {
-  "title": "🔥 Anh-Thi DINH",
+  "title": "🔥 New Trick",
   "url": "https://mohammadrezaeian.github.io/",
   "domain": ".com",
   "description": "I failed my way to success!",
